<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="online.marcosvirgilio.mobile.seg.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="online.marcosvirgilio.mobile.seg.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="online.marcosvirgilio.mobile.seg.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_cad_credencial"
        android:name="online.marcosvirgilio.mobile.seg.ui.credencial.CadCredencialFragment"
        android:label="@string/title_cad_credencial"
        tools:layout="@layout/fragment_cad_credencial" />

    <fragment
        android:id="@+id/navigation_con_credencial"
        android:name="online.marcosvirgilio.mobile.seg.ui.credencial.ConCredencialFragment"
        android:label="@string/title_con_credencial"
        tools:layout="@layout/fragment_con_credencial_list" />
</navigation>